refactor(execution): simplify render attempt and backend contracts
- RenderJob: FAILED is now terminal (no in-place retry)
- Retry creates new RenderJob via createRetryJob()
- Recovery creates new RenderJob instead of requeuing
- Deprecated RETRYING/FALLBACKING enum values
- Deprecated requeueFailedJob/requeueExecutingJob methods
- Backend ID already canonical (ffmpeg)